Update duration-offloading contract